--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <video height="600px" muted autoplay controls>
-      <source
-        src="./src/videos/transcoded/SaveYourTears.mp4/SaveYourTears.mp4.m3u8"
-      />
+    <video height="200px" muted autoplay="false" controls>
+      <source src="./src/videos/transcoded/SaveYourTears/SaveYourTears.m3u8" />
     </video>
   </body>
 </html>
