--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <video height="200px" muted autoplay="false" controls>
-      <source src="./src/videos/transcoded/SaveYourTears/SaveYourTears.m3u8" />
+    <video height="600px" muted autoplay controls>
+      <source src="./src/videos/transcoded/IMG_4431/IMG_4431.m3u8" />
     </video>
   </body>
 </html>
