Cleanup and refactor

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <video height="600px" muted autoplay controls>
-      <source src="./src/videos/transcoded/IMG_4431/IMG_4431.m3u8" />
+      <source
+        src="./src/videos/transcoded/Taylor Swift Style/Taylor Swift Style.m3u8"
+      />
     </video>
   </body>
 </html>
